# gemini_tts

./: CLAUDE.md  MANIFEST.in  private_readme.org  pyproject.toml  readme.org  requirements.txt  todo.org
.claude/: settings.local.json
examples/: Civ_Avoidance_ACT_6_Opus4T.md  test_script.md
gemini_tts/: __init__.py  cli.py  tts_lib.py
