[project]
name = "gemini-tts"
version = "0.1.0"
description = "Converts long documents into audio files using the Gemini TTS API, with support for multi-speaker inputs (e.g., podcast scripts)."
authors = [
    {name = "NightMachinery", email = "feraidoonmehri@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.2.0",
    "aiofiles>=23.0.0",
    "tqdm>=4.64.0",
    "pynight",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
gemini-tts = "gemini_tts.cli:main"

[project.urls]
Homepage = "https://github.com/NightMachinery/gemini-tts"
Issues = "https://github.com/NightMachinery/gemini-tts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_tts"]
